--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ jdk: oraclejdk7
 
 android:
   components:
+    - tools
     - extra-android-m2repository
     - build-tools-23.0.2
     - android-23
